# arb-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.override.yml  compose.yml  config.example.toml  connect-droplet.sh
.github/workflows/: prod.yml  prod.yml believing
docs/: EXCHANGE_ARCHITECTURE.md  PRICE_STREAMING_FLOW.md  TASK8_LOGGING_PLAN.md  phase1_implementation_guide.md
docs/ai_prompts/: intial_prompt.md  task_logging_protocol.md
examples/: binance_websocket_test.rs  coinbase_websocket_test.rs
src/: constants.rs  lib.rs  main.rs
src/config/: exchange.rs  mod.rs  parse.rs  trading.rs
src/error/: exchange.rs  mod.rs  types.rs
src/exchanges/: factory.rs  mod.rs  types.rs
src/exchanges/binance/: exchange.rs  mod.rs  parser.rs  rest.rs  types.rs
src/exchanges/coinbase/: auth.rs  exchange.rs  mod.rs  parser.rs  rest.rs  types.rs
src/logger/: config.rs  mod.rs
src/state/: mod.rs  price.rs  types.rs
src/websocket/: manager.rs  mod.rs  parser.rs  reconnect.rs
tests/: binance.rs  coinbase.rs  coinbase_auth.rs  coinbase_rest.rs  config.rs  error_handling.rs  exchange_trait.rs  helpers.rs  integration_test.rs  logging.rs  price_state.rs  websocket_manager.rs
tests/common/: mock_exchange.rs  mod.rs
