[package]
name = "arb-bot"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.21"
rust_decimal = "1.35"
toml = "0.8"
config = "0.14"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
# MockExchange is available in tests via test-utils feature
