[package]
name = "arb-bot"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
rust_decimal = "1.35"
toml = "0.8"
config = "0.14"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[[example]]
name = "binance_websocket_test"
path = "examples/binance_websocket_test.rs"

[[example]]
name = "coinbase_websocket_test"
path = "examples/coinbase_websocket_test.rs"

[dev-dependencies]
# MockExchange is available in tests via test-utils feature
