[package]
name = "arb-bot"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
rust_decimal = "1.35"
toml = "0.8"
config = "0.14"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
# JWT signing (ES256 algorithm) for Coinbase REST API
jsonwebtoken = "9.3"
# ECDSA P-256 curve support
p256 = "0.13"
# For parsing PEM-encoded EC private keys
pkcs8 = "0.10"
sec1 = "0.7"  # For parsing SEC1 format EC keys
ecdsa = "0.16"
# For loading .env files
dotenvy = "0.15"
# For generating random nonces
rand = "0.8"
# For base64 encoding in JWT
base64 = "0.22"

[[example]]
name = "binance_websocket_test"
path = "examples/binance_websocket_test.rs"

[[example]]
name = "coinbase_websocket_test"
path = "examples/coinbase_websocket_test.rs"

[dev-dependencies]
base64 = "0.22"  # For JWT decoding in tests
